[package]
name = "easy_proc_macro"
version = "0.1.0"
authors = ["Daniel Conley <himself@danii.dev>"]
license = "MIT"
description = "Rust's last proc-macro crate."
repository = "https://github.com/danii/easy_proc_macro.git"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "easy", "hack", "proc-macro", "procedural"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.0"
proc-macro2 = "1.0.24"
quote = "1.0.8"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
syn = {version = "1.0.60", features = ["full"]}
tempfile = "3.2.0"

[features]
default = []
trace = []
local = ["nightly"]
nightly = []
